# Personal-SSH

./: .gitignore  1. PREPARATION.bat  2. FINAL-BUILD.bat  3. COPY.bat  4. CLEAR.bat  README.md  _CLEAR.bat  _FINAL-BUILD.bat  commit.bat  examples-variables.json
java-server/: .gitignore  pom.xml
java-server/src/main/java/com/prohor/personal/personalSshWsServer/: AutoCloseableServer.java  Command.java  CycleExecutor.java  FileLogger.java  Main.java  ResultWaiter.java  Task.java  Variables.java  WebSocketServer.java
java-server/src/main/resources/: log4j2.xml
js-client/: index.html  script.js  style.css
rust-agent/: Cargo.toml
rust-agent/src/: main.rs
